Bug 406433 - Falkon crashes when creating new bookmark / new folder / new seperator in organize bookmarks
Summary: Falkon crashes when creating new bookmark / new folder / new seperator in org...
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
: 409586 418119 429998 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-04-11 12:08 UTC by saish
Modified: 2020-12-10 19:06 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.1
Sentry Crash Report:


Attachments
backtrace file (35.26 KB, text/plain)
2019-04-11 12:08 UTC, saish
Details

Note You need to log in before you can comment on or make changes to this bug.
Description saish 2019-04-11 12:08:53 UTC
Created attachment 119353 [details]
backtrace file

SUMMARY
falkon crashes when creating new bookmark or new folder or new seperator in organize bookmarks & itried on windows 10 too same bug is in windows version of falkon.

STEPS TO REPRODUCE
1. Main menu->organize bookmarks
2. Right click in empty area
3. clcik on any one new folder/bookmark/seperator

OBSERVED RESULT
After clicking on any one of them falkon just closes/crashes.

EXPECTED RESULT
After clicking any one of them it should create new folder/bookmark/seperator.

SOFTWARE/OS VERSIONS
Linux: Ubuntu 18.04.2 LTS
Qt Version: 5.12.2

ADDITIONAL INFORMATION
1st time when I was creating bookmark or new folder it was working but after few minutes it got crashed so I tried from windows too but it crashing there also
backtrace file has been attached.
Comment 1 saish 2019-04-11 12:13:04 UTC
the backtrace shows there is Segmentation fault in BookmarkItem::isUrl() const ()
Comment 2 David Rosca 2019-04-20 12:09:21 UTC
Git commit 514097ef4c3abf1a7e233976f2d09567e6ffad34 by David Rosca.
Committed on 20/04/2019 at 12:08.
Pushed by drosca into branch 'Falkon/3.1'.

BookmarksManager: Don't allow to create bookmark without parent
FIXED-IN: 3.1.1

M  +9    -3    src/lib/bookmarks/bookmarksmanager.cpp

https://commits.kde.org/falkon/514097ef4c3abf1a7e233976f2d09567e6ffad34
Comment 3 Juraj 2019-07-19 16:41:06 UTC
*** Bug 409586 has been marked as a duplicate of this bug. ***
Comment 4 Juraj 2020-02-24 08:46:59 UTC
*** Bug 418119 has been marked as a duplicate of this bug. ***
Comment 5 Juraj 2020-12-10 19:06:33 UTC
*** Bug 429998 has been marked as a duplicate of this bug. ***