BookmarksManager: Don't allow to create bookmark without parent

BUG: 406433
FIXED-IN: 3.1.1